# learn-solana

./: .gitignore  README.md  package.json
cli/: hello-world.ts  transfer-lamports.ts  utils.ts
own_token/client/: README.md  package.json
own_token/client/example/: mint_and_transfer.ts
own_token/client/src/: constants.ts  index.ts
own_token/client/src/actions/: createMint.ts
own_token/client/src/instructions/: index.ts  initializeMint.ts  types.ts
own_token/client/src/state/: mint.ts
own_token/program/: Cargo.toml  Makefile
own_token/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
own_token/program/src/state/: mint.rs  mod.rs  utils.rs
programs/hello-world/: Cargo.toml
programs/hello-world/src/: lib.rs
programs/math/: Cargo.toml
programs/math/src/: entrypoint.rs  instruction.rs
programs/transfer-lamports/: Cargo.toml
programs/transfer-lamports/src/: entrypoint.rs  lib.rs  processor.rs
token/client/: package.json
token/client/examples/: create_mint_and_transfer_tokens.ts
token/client/src/: constants.ts  errors.ts  index.ts
token/client/src/actions/: createMint.ts  index.ts
token/client/src/instructions/: index.ts  initializeMint.ts  types.ts
token/client/src/state/: index.ts  mint.ts
token/program/: Cargo.toml  Makefile
token/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
