[package]
name = "program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
solana-program = "1.9.5"
thiserror = "1.0.30"
num-derive = "0.3"
num-traits = "0.2"
arrayref = "0.3.6"



[lib]
crate-type = ["cdylib","lib"]